<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:animateLayoutChanges="true"
                android:contentDescription="@string/content_slide_view"
                android:src="@drawable/ic_launcher" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#3699be" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" >

                <Chronometer
                    android:id="@+id/chronometer1"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/label_chronometer"
                    android:textSize="75sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.5"
                    android:animateLayoutChanges="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_current_slide"
                        android:textSize="20sp" />

                    <Chronometer
                        android:id="@+id/chronometer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_chronometer"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="#3699be" />

        <ViewSwitcher
            android:id="@+id/notesSwitcher"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:animateLayoutChanges="true" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true"
                android:text="@string/label_notes"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </ViewSwitcher>
    </LinearLayout>

</RelativeLayout>